# OmixForge

./: .gitignore  LICENSE  Makefile  README.md  Readme.MD  omixforge.desktop  pyproject.toml
.github/workflows/: debian-source-package.yml  launchpad-deploy.yml  makefile.yml
debian/: changelog  control  copyright  omixforge-wrapper  omixforge.install  rules
debian/source/: include-binaries
scripts/: build-debian-source.sh
src/: __main__.py
src/assets/: stylesheet.py
src/core/: initiate.py
src/core/about_page/: about.py
src/core/dashboard/: pipeline_dashboard.py
src/core/dashboard/pipeline_dash_tab/: local_pipeline.py  pipeline_args.py  pipeline_card.py
src/core/dashboard/pipeline_editor_tab/: pipeline_editor.py
src/core/plugin_manager/: __init__.py  manager.py  plugin_api.py  plugin_installer.py  plugin_page.py
src/core/profile_page/: login.py  profile.py  requirements.py  signup.py  startup_page.py
src/core/sample/: sample_page.py  sample_prep.py
src/core/settings_page/: settings.py
src/core/status_page/: pipeline_status.py
src/utils/: constants.py  nfcore_utils.py  resource.py  version.py
src/utils/encryption/: handle.py
src/utils/fileops/: file_handle.py
src/utils/logger_module/: omix_logger.py
src/utils/subcommands/: shell.py
src/utils/widgets/: credential_popup.py  filetree.py  fileview.py  loading.py  loading_spinner.py
tests/: conftest.py
tests/test_ui/: test_main_page.py  test_pipeline_dashboard.py
tests/test_utils/: test_encryption.py  test_fileops.py  test_nfcoreutils.py  test_subcommands.py
(+19 files in other folders)
